[package]
name = "test-tracing-instrument"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.23.0", features = ["metrics", "logs"] }
opentelemetry-stdout = "0.4.0"
opentelemetry_sdk = "0.23.0"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3.18"
